@@ -50,6 +50,7 @@ Version 2.5.0
 * Fix long standing issue w.r.t. (Mark5) media change detection: media change would never split a job.
 * Option sortAntennas in .v2d file (default=true) now allows prevention of sorting (set sortAntennas=false).  Use of this feature requires an antenna list to be provided in the .v2d file.
 * Remove dangerous option for antenna partial matching in .v2d file
+* Check for duplicate channels and warn if found.
 * Version for DiFX-2.5, May 16, 2017
 
 Version 2.4.0
